src/objects/Client_Strategy_Development__c.object
<CustomObject>
    <description>Used with Account Plans to track client&apos;s near- and long-term needs, drivers, etc.
Originally called Client Strategy Development</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <inlineHelpText>Link back to Account Plan record</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Client_Strategy_Development</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <inlineHelpText>AECOM team, e.g., EBL, EMEA, Upstream</inlineHelpText>
        <label>Account Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <inlineHelpText>Enter high-level actions to achieve (specific tasks should be entered on the Account Plan Activities list)</inlineHelpText>
        <label>Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>Client&apos;s budget for this element</inlineHelpText>
        <label>Client Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select from Contact records in Salesforce. If missing, leave this record open, open the Contacts tab in a new window, and create the contact record. Then return to this record and search again.</inlineHelpText>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Client_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drivers_business_regulatory__c</fullName>
        <label>Drivers (business, regulatory)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Priorities_Growth_Plans_M_A__c</fullName>
        <label>Needs/Priorities/Growth Plans/M&amp;A</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Design/Build/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering/Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Current FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Strategic Roadmap Element</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Strategic Roadmap Elements</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Roadmap Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>